--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
 						<header class="major">
 							<h2>ประวัติการศึกษา</h2>
 						</header>
-						<p>มหาวิทยาลัยราชภัฏอุดรธานี (ตั้งแต่ปี 2022 ถึง ปัจจุบัน)<br> สาขาวิศวกรรมคอมพิวเตอร์และการสื่อสาร - GPA: 2.88</p>
-						<p>วิทยาลัยอาชีวศึกษาอุดรธานี (ตั้งแต่ปี 2020 ถึง ปี 2022)<br> สาขาเทคโนโลยีธุรกิจดิจิทัล - GPA: 3.95</p>
-						<p>โรงเรียนอุดรพิชัยรักษ์พิทยา (ตั้งแต่ปี 2017 ถึง ปี 2020)<br> แผนการเรียนวิทยาศาสตร์ - คณิตศาสตร์ - GPA: 2.88</p>
+						<p>- มหาวิทยาลัยราชภัฏอุดรธานี (ตั้งแต่ปี 2022 ถึง ปัจจุบัน)<br> สาขาวิศวกรรมคอมพิวเตอร์และการสื่อสาร - GPA: 2.88</p>
+						<p>- วิทยาลัยอาชีวศึกษาอุดรธานี (ตั้งแต่ปี 2020 ถึง ปี 2022)<br> สาขาเทคโนโลยีธุรกิจดิจิทัล - GPA: 3.95</p>
+						<p>- โรงเรียนอุดรพิชัยรักษ์พิทยา (ตั้งแต่ปี 2017 ถึง ปี 2020)<br> แผนการเรียนวิทยาศาสตร์ - คณิตศาสตร์ - GPA: 2.88</p>
 						<ul class="actions">
 							<li><a href="http://127.0.0.1:5500/resume3/index.html#:~:text=Learn%20More-,%E0%B8%9B%E0%B8%A3%E0%B8%B0%E0%B8%AA%E0%B8%9A%E0%B8%81%E0%B8%B2%E0%B8%A3%E0%B8%93%E0%B9%8C%E0%B8%97%E0%B8%B3%E0%B8%87%E0%B8%B2%E0%B8%99,-%E0%B8%9D%E0%B8%B6%E0%B8%81%E0%B8%87%E0%B8%B2%E0%B8%99%E0%B8%97%E0%B8%B5%E0%B9%88%20T%2DCars" class="button">Learn More</a></li>
 						</ul>
@@ -97,17 +97,27 @@
 						<header class="major">
 							<h2>ความสามารถ</h2>
 						</header>
-						<p><strong>Java :</strong> ระดับดี<br> 
-						<strong>C++ :</strong> ระดับดี <br>
-						<strong>PHP :</strong> ระดับดี<br>		
-						<strong>Python :</strong> ระดับกลาง<br>
-						<strong>HTML :</strong> ระดับกลาง<br>
-						<strong>MySQL : </strong>ระดับดี</p>
+						<p><strong>C++ :</strong>(ระดับพื้นฐาน) มีความเข้าใจและสามารถเขียนโค้ดคำสั่งพื้นฐานได้ เช่น การจัดการตัวแปร การควบคุมเงื่อนไข และการใช้งานฟังก์ชันเบื้องต้น <br>
+						<strong>PHP :</strong> (ระดับกลาง)มีความสามารถในการพัฒนาเว็บไซต์ด้วย PHP โดยสามารถเขียนโปรแกรมที่ซับซ้อนและจัดการการสื่อสารระหว่างเซิร์ฟเวอร์และฐานข้อมูลได้เป็นอย่างดี<br>		
+						<strong>Python :</strong> (ระดับพื้นฐาน)เข้าใจหลักการและโครงสร้างของ Python สามารถเขียนโปรแกรมพื้นฐานและใช้ไลบรารีที่ง่ายต่อการจัดการข้อมูลได้<br>
+						<strong>HTML :</strong> (ระดับพื้นฐาน)มีความเข้าใจในการจัดโครงสร้างหน้าเว็บ สามารถสร้างหน้าเว็บพื้นฐานและใช้แท็ก HTML สำหรับการจัดเรียงข้อมูลได้<br>
+						<strong>MySQL : </strong>(ระดับกลาง)มีความสามารถในการสร้างและจัดการฐานข้อมูล SQL สามารถออกแบบฐานข้อมูล เขียนคำสั่ง CRUD (Create, Read, Update, Delete) และสร้างคำสั่ง SQL ที่ซับซ้อนได้</p>
 						<ul class="actions">
 							<li><a href="http://127.0.0.1:5500/resume3/index.html#:~:text=Learn%20More-,%E0%B8%8A%E0%B9%88%E0%B8%AD%E0%B8%87%E0%B8%97%E0%B8%B2%E0%B8%87%E0%B8%81%E0%B8%B2%E0%B8%A3%E0%B8%95%E0%B8%B4%E0%B8%94%E0%B8%95%E0%B9%88%E0%B8%AD,-%E0%B8%AB%E0%B8%B2%E0%B8%81%E0%B8%95%E0%B9%89%E0%B8%AD%E0%B8%87%E0%B8%81%E0%B8%B2%E0%B8%A3%E0%B8%95%E0%B8%B4%E0%B8%94%E0%B8%95%E0%B9%88%E0%B8%AD" class="button">Learn More</a></li>
 						</ul>
 					</section>
-
+					<section id="one">
+						<header class="major">
+							<h2>ทักษะการใช้งานโปรแกรม</h2>
+						</header>
+						<p><strong>Microsoft Office :</strong>(ระดับกลาง) มีความเชี่ยวชาญในการใช้งาน Microsoft Office (เช่น Word, Excel, PowerPoint) สามารถจัดการเอกสาร สร้างตารางวิเคราะห์ข้อมูล และนำเสนอข้อมูลได้อย่างมืออาชีพ <br>
+						<strong>Photoshop  :</strong> (ระดับกลาง) มีทักษะในการใช้งาน Adobe Photoshop สำหรับการออกแบบและปรับแต่งรูปภาพ สามารถสร้างงานกราฟิกที่สวยงามและเป็นมืออาชีพ ใช้เครื่องมือที่ซับซ้อนเพื่อสร้างภาพที่มีคุณภาพ<br>		
+						<strong>Illustrator :</strong> (ระดับพื้นฐาน)มีความเข้าใจในหลักการพื้นฐานของ Adobe Illustrator สามารถสร้างกราฟิกเวกเตอร์ที่เรียบง่าย และใช้งานเครื่องมือเบื้องต้นในการออกแบบได้<br>
+						<strong>ChatGPT :</strong> (ระดับพื้นฐาน)มีความสามารถในการใช้งาน ChatGPT ในการค้นหาข้อมูล การตอบคำถาม และการสนับสนุนงานเขียนหรือการทำงานในเชิงข้อมูล สามารถใช้งานได้ในระดับเริ่มต้นและเข้าใจหลักการทำงานเบื้องต้นของระบบ AI ช่วยในการประมวลผลและให้ข้อมูลตามความต้องการ<br></p>
+						<ul class="actions">
+							<li><a href="http://127.0.0.1:5500/resume3/index.html#:~:text=Learn%20More-,%E0%B8%8A%E0%B9%88%E0%B8%AD%E0%B8%87%E0%B8%97%E0%B8%B2%E0%B8%87%E0%B8%81%E0%B8%B2%E0%B8%A3%E0%B8%95%E0%B8%B4%E0%B8%94%E0%B8%95%E0%B9%88%E0%B8%AD,-%E0%B8%AB%E0%B8%B2%E0%B8%81%E0%B8%95%E0%B9%89%E0%B8%AD%E0%B8%87%E0%B8%81%E0%B8%B2%E0%B8%A3%E0%B8%95%E0%B8%B4%E0%B8%94%E0%B8%95%E0%B9%88%E0%B8%AD" class="button">Learn More</a></li>
+						</ul>
+					</section>
 				<!-- Three -->
 					<section id="three">
 						<h2>ช่องทางการติดต่อ</h2>
