--- a/index.html
+++ b/index.html
@@ -97,10 +97,10 @@
 						<header class="major">
 							<h2>ความสามารถ</h2>
 						</header>
-						<p><strong>C++ :</strong>(ระดับพื้นฐาน) มีความเข้าใจและสามารถเขียนโค้ดคำสั่งพื้นฐานได้ เช่น การจัดการตัวแปร การควบคุมเงื่อนไข และการใช้งานฟังก์ชันเบื้องต้น <br>
-						<strong>PHP :</strong> (ระดับกลาง)มีความสามารถในการพัฒนาเว็บไซต์ด้วย PHP โดยสามารถเขียนโปรแกรมที่ซับซ้อนและจัดการการสื่อสารระหว่างเซิร์ฟเวอร์และฐานข้อมูลได้เป็นอย่างดี<br>		
-						<strong>Python :</strong> (ระดับพื้นฐาน)เข้าใจหลักการและโครงสร้างของ Python สามารถเขียนโปรแกรมพื้นฐานและใช้ไลบรารีที่ง่ายต่อการจัดการข้อมูลได้<br>
-						<strong>HTML :</strong> (ระดับพื้นฐาน)มีความเข้าใจในการจัดโครงสร้างหน้าเว็บ สามารถสร้างหน้าเว็บพื้นฐานและใช้แท็ก HTML สำหรับการจัดเรียงข้อมูลได้<br>
+						<p><strong>C++ :</strong>(ระดับพื้นฐาน) มีความเข้าใจและสามารถเขียนโค้ดคำสั่งพื้นฐานได้ เช่น การจัดการตัวแปร การควบคุมเงื่อนไข และการใช้งานฟังก์ชันเบื้องต้น <br><br>
+						<strong>PHP :</strong> (ระดับกลาง)มีความสามารถในการพัฒนาเว็บไซต์ด้วย PHP โดยสามารถเขียนโปรแกรมที่ซับซ้อนและจัดการการสื่อสารระหว่างเซิร์ฟเวอร์และฐานข้อมูลได้เป็นอย่างดี<br><br>		
+						<strong>Python :</strong> (ระดับพื้นฐาน)เข้าใจหลักการและโครงสร้างของ Python สามารถเขียนโปรแกรมพื้นฐานและใช้ไลบรารีที่ง่ายต่อการจัดการข้อมูลได้<br><br>
+						<strong>HTML :</strong> (ระดับพื้นฐาน)มีความเข้าใจในการจัดโครงสร้างหน้าเว็บ สามารถสร้างหน้าเว็บพื้นฐานและใช้แท็ก HTML สำหรับการจัดเรียงข้อมูลได้<br><br>
 						<strong>MySQL : </strong>(ระดับกลาง)มีความสามารถในการสร้างและจัดการฐานข้อมูล SQL สามารถออกแบบฐานข้อมูล เขียนคำสั่ง CRUD (Create, Read, Update, Delete) และสร้างคำสั่ง SQL ที่ซับซ้อนได้</p>
 						<ul class="actions">
 							<li><a href="http://127.0.0.1:5500/resume3/index.html#:~:text=Learn%20More-,%E0%B8%8A%E0%B9%88%E0%B8%AD%E0%B8%87%E0%B8%97%E0%B8%B2%E0%B8%87%E0%B8%81%E0%B8%B2%E0%B8%A3%E0%B8%95%E0%B8%B4%E0%B8%94%E0%B8%95%E0%B9%88%E0%B8%AD,-%E0%B8%AB%E0%B8%B2%E0%B8%81%E0%B8%95%E0%B9%89%E0%B8%AD%E0%B8%87%E0%B8%81%E0%B8%B2%E0%B8%A3%E0%B8%95%E0%B8%B4%E0%B8%94%E0%B8%95%E0%B9%88%E0%B8%AD" class="button">Learn More</a></li>
@@ -110,9 +110,9 @@
 						<header class="major">
 							<h2>ทักษะการใช้งานโปรแกรม</h2>
 						</header>
-						<p><strong>Microsoft Office :</strong>(ระดับกลาง) มีความเชี่ยวชาญในการใช้งาน Microsoft Office (เช่น Word, Excel, PowerPoint) สามารถจัดการเอกสาร สร้างตารางวิเคราะห์ข้อมูล และนำเสนอข้อมูลได้อย่างมืออาชีพ <br>
-						<strong>Photoshop  :</strong> (ระดับกลาง) มีทักษะในการใช้งาน Adobe Photoshop สำหรับการออกแบบและปรับแต่งรูปภาพ สามารถสร้างงานกราฟิกที่สวยงามและเป็นมืออาชีพ ใช้เครื่องมือที่ซับซ้อนเพื่อสร้างภาพที่มีคุณภาพ<br>		
-						<strong>Illustrator :</strong> (ระดับพื้นฐาน)มีความเข้าใจในหลักการพื้นฐานของ Adobe Illustrator สามารถสร้างกราฟิกเวกเตอร์ที่เรียบง่าย และใช้งานเครื่องมือเบื้องต้นในการออกแบบได้<br>
+						<p><strong>Microsoft Office :</strong>(ระดับกลาง) มีความเชี่ยวชาญในการใช้งาน Microsoft Office (เช่น Word, Excel, PowerPoint) สามารถจัดการเอกสาร สร้างตารางวิเคราะห์ข้อมูล และนำเสนอข้อมูลได้อย่างมืออาชีพ <br><br>
+						<strong>Photoshop  :</strong> (ระดับกลาง) มีทักษะในการใช้งาน Adobe Photoshop สำหรับการออกแบบและปรับแต่งรูปภาพ สามารถสร้างงานกราฟิกที่สวยงามและเป็นมืออาชีพ ใช้เครื่องมือที่ซับซ้อนเพื่อสร้างภาพที่มีคุณภาพ<br><br>		
+						<strong>Illustrator :</strong> (ระดับพื้นฐาน)มีความเข้าใจในหลักการพื้นฐานของ Adobe Illustrator สามารถสร้างกราฟิกเวกเตอร์ที่เรียบง่าย และใช้งานเครื่องมือเบื้องต้นในการออกแบบได้<br><br>
 						<strong>ChatGPT :</strong> (ระดับพื้นฐาน)มีความสามารถในการใช้งาน ChatGPT ในการค้นหาข้อมูล การตอบคำถาม และการสนับสนุนงานเขียนหรือการทำงานในเชิงข้อมูล สามารถใช้งานได้ในระดับเริ่มต้นและเข้าใจหลักการทำงานเบื้องต้นของระบบ AI ช่วยในการประมวลผลและให้ข้อมูลตามความต้องการ<br></p>
 						<ul class="actions">
 							<li><a href="http://127.0.0.1:5500/resume3/index.html#:~:text=Learn%20More-,%E0%B8%8A%E0%B9%88%E0%B8%AD%E0%B8%87%E0%B8%97%E0%B8%B2%E0%B8%87%E0%B8%81%E0%B8%B2%E0%B8%A3%E0%B8%95%E0%B8%B4%E0%B8%94%E0%B8%95%E0%B9%88%E0%B8%AD,-%E0%B8%AB%E0%B8%B2%E0%B8%81%E0%B8%95%E0%B9%89%E0%B8%AD%E0%B8%87%E0%B8%81%E0%B8%B2%E0%B8%A3%E0%B8%95%E0%B8%B4%E0%B8%94%E0%B8%95%E0%B9%88%E0%B8%AD" class="button">Learn More</a></li>
